--- a/catalogo.html
+++ b/catalogo.html
@@ -7,7 +7,7 @@
 <title>Document</title>
 </head>
 <body>
-<h1>Página Catálogo</h1>
+<h1>Página de Catálogo</h1>
 <p>Sejam bem-vindos à página catálogo</p>
 <a href="index.html">Ir para a página inicial</a>
 </body>
